--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Meu portifólio</title>
+        <link href="./src/input.css" rel="stylesheet">
         <link href="./src/output.css" rel="stylesheet">
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+        </style>
     </head>
     <body class="bg-[#202020]">
         <nav class="flex justify-between py-3 px-25 items-center">
@@ -12,7 +16,7 @@
                 <img src="./src/images/Logo caua.png" alt="">
             </div>
             <div class="flex gap-8">
-                <ul class="flex items-center gap-6 text-white">
+                <ul class="flex items-center gap-6 text-[#fff]">
                     <li>Inicio</li>
                     <li>Sobre</li>
                     <li>Projetos</li>
@@ -32,19 +36,43 @@
                 </div>
             </div>
         </nav>
+        <header class="relative flex justify-end h-full">
+            <img src="./src/images/banner preto.png" alt="">
+            <div class="px-25 z-10 flex absolute h-full items-center">
+                <div class="bg-[#101010]/80 border-l-4 border-white p-10">
+                    <div class="flex gap-15">
+                        <div class="size-[50%]">
+                            <p class="bg-(image:--gradient) bg-clip-text text-transparent max-w-fit text-6xl font-[poppins] font-semibold h-17">Designer</p>
+                            <p class="text-white mt-4 text-base font-[poppins] font-normal"> Produtor de designs com experiências limpas e agradaveis</p>
+                        </div>
+                        <div class="size-[50%]">
+                            <p class="bg-(image:--gradient) bg-clip-text text-transparent max-w-fit text-6xl font-[poppins] font-semibold h-17"> < Coder ></p>
+                            <p class="text-white mt-4 text-base font-[poppins] font-normal">Programador eficaz com codigos limpos e rapidos</p>
+                        </div>
+                    </div>
+                    <a href="#projetos" class="bg-(image:--gradient) mt-10 flex justify-center rounded-lg">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="rotate-180 size-10">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 15.75 7.5-7.5 7.5 7.5" />
+                        </svg>  
+                    </a>
+                </div>
+            </div>
+            </div>
+        </header>
         <div class="fixed bottom-3 left-3 bg-[#101010] px-1.5 py-3 flex flex-col gap-3">
             <a target="_blank" href="https://www.linkedin.com/in/cauã-mohor-pardini">
                 <svg class="fill-white" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="28" height="28" viewBox="0 0 50 50">
                     <path d="M41,4H9C6.24,4,4,6.24,4,9v32c0,2.76,2.24,5,5,5h32c2.76,0,5-2.24,5-5V9C46,6.24,43.76,4,41,4z M17,20v19h-6V20H17z M11,14.47c0-1.4,1.2-2.47,3-2.47s2.93,1.07,3,2.47c0,1.4-1.12,2.53-3,2.53C12.2,17,11,15.87,11,14.47z M39,39h-6c0,0,0-9.26,0-10 c0-2-1-4-3.5-4.04h-0.08C27,24.96,26,27.02,26,29c0,0.91,0,10,0,10h-6V20h6v2.56c0,0,1.93-2.56,5.81-2.56 c3.97,0,7.19,2.73,7.19,8.26V39z"></path>
                 </svg>
             </a>
-            
-            <svg class="fill-white" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="28" height="28" viewBox="0 0 24 24">
-                <path d="M10.9,2.1c-4.6,0.5-8.3,4.2-8.8,8.7c-0.6,5,2.5,9.3,6.9,10.7v-2.3c0,0-0.4,0.1-0.9,0.1c-1.4,0-2-1.2-2.1-1.9 c-0.1-0.4-0.3-0.7-0.6-1C5.1,16.3,5,16.3,5,16.2C5,16,5.3,16,5.4,16c0.6,0,1.1,0.7,1.3,1c0.5,0.8,1.1,1,1.4,1c0.4,0,0.7-0.1,0.9-0.2 c0.1-0.7,0.4-1.4,1-1.8c-2.3-0.5-4-1.8-4-4c0-1.1,0.5-2.2,1.2-3C7.1,8.8,7,8.3,7,7.6C7,7.2,7,6.6,7.3,6c0,0,1.4,0,2.8,1.3 C10.6,7.1,11.3,7,12,7s1.4,0.1,2,0.3C15.3,6,16.8,6,16.8,6C17,6.6,17,7.2,17,7.6c0,0.8-0.1,1.2-0.2,1.4c0.7,0.8,1.2,1.8,1.2,3 c0,2.2-1.7,3.5-4,4c0.6,0.5,1,1.4,1,2.3v3.3c4.1-1.3,7-5.1,7-9.5C22,6.1,16.9,1.4,10.9,2.1z"></path>
-            </svg>
+            <a target="_blank" href="https://github.com/CauaDK">
+                <svg class="fill-white" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="28" height="28" viewBox="0 0 24 24">
+                    <path d="M10.9,2.1c-4.6,0.5-8.3,4.2-8.8,8.7c-0.6,5,2.5,9.3,6.9,10.7v-2.3c0,0-0.4,0.1-0.9,0.1c-1.4,0-2-1.2-2.1-1.9 c-0.1-0.4-0.3-0.7-0.6-1C5.1,16.3,5,16.3,5,16.2C5,16,5.3,16,5.4,16c0.6,0,1.1,0.7,1.3,1c0.5,0.8,1.1,1,1.4,1c0.4,0,0.7-0.1,0.9-0.2 c0.1-0.7,0.4-1.4,1-1.8c-2.3-0.5-4-1.8-4-4c0-1.1,0.5-2.2,1.2-3C7.1,8.8,7,8.3,7,7.6C7,7.2,7,6.6,7.3,6c0,0,1.4,0,2.8,1.3 C10.6,7.1,11.3,7,12,7s1.4,0.1,2,0.3C15.3,6,16.8,6,16.8,6C17,6.6,17,7.2,17,7.6c0,0.8-0.1,1.2-0.2,1.4c0.7,0.8,1.2,1.8,1.2,3 c0,2.2-1.7,3.5-4,4c0.6,0.5,1,1.4,1,2.3v3.3c4.1-1.3,7-5.1,7-9.5C22,6.1,16.9,1.4,10.9,2.1z"></path>
+                </svg>
+            </a>
         </div>
         <a href="#inicio" class="fixed bottom-3 right-3 bg-[#101010] p-1.5">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-7 stroke-white">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="size-7">
                 <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 15.75 7.5-7.5 7.5 7.5" />
             </svg>              
         </a>
