--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
             @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
         </style>
     </head>
-    <body class="bg-[#202020]">
+    <body class="bg-[#202020]"><a name="home"></a>
         <nav class="flex justify-between py-3 px-25 items-center">
             <div class="w-30">
                 <img src="./src/images/Logo caua.png" alt="">
             </div>
             <div class="flex gap-8">
-                <ul class="flex items-center gap-6 text-[#fff]">
-                    <li>Inicio</li>
-                    <li>Sobre</li>
-                    <li>Projetos</li>
-                    <li>Contato</li>
+                <ul class="flex items-center gap-6 text-[#fff] font-[poppins] font-normal">
+                    <li class="hover:bg-(image:--gradient) hover:bg-clip-text hover:text-transparent transition duration-300"><a href="">Inicio</a></li>
+                    <li class="hover:bg-(image:--gradient) hover:bg-clip-text hover:text-transparent transition duration-300"><a href="">Sobre</a></li>
+                    <li class="hover:bg-(image:--gradient) hover:bg-clip-text hover:text-transparent transition duration-300"><a href="">Projetos</a></li>
+                    <li class="hover:bg-(image:--gradient) hover:bg-clip-text hover:text-transparent transition duration-300"><a href="">Contato</a></li>
                 </ul>
                 <div class="flex w-12 bg-[#101010] h-auto rounded-4xl justify-between">
                     <div class="flex w-6 h-6 bg-white rounded-[50%] items-center justify-center">
@@ -43,11 +43,11 @@
                     <div class="flex gap-15">
                         <div class="size-[50%]">
                             <p class="bg-(image:--gradient) bg-clip-text text-transparent max-w-fit text-6xl font-[poppins] font-semibold h-17">Designer</p>
-                            <p class="text-white mt-4 text-base font-[poppins] font-normal"> Produtor de designs com experiências limpas e agradaveis</p>
+                            <p class="text-white mt-4 font-[poppins] font-normal"> Produtor de designs com experiências limpas e agradaveis</p>
                         </div>
                         <div class="size-[50%]">
                             <p class="bg-(image:--gradient) bg-clip-text text-transparent max-w-fit text-6xl font-[poppins] font-semibold h-17"> < Coder ></p>
-                            <p class="text-white mt-4 text-base font-[poppins] font-normal">Programador eficaz com codigos limpos e rapidos</p>
+                            <p class="text-white mt-4 font-[poppins] font-normal">Programador eficaz com codigos limpos e rapidos</p>
                         </div>
                     </div>
                     <a href="#projetos" class="bg-(image:--gradient) mt-10 flex justify-center rounded-lg">
@@ -59,6 +59,45 @@
             </div>
             </div>
         </header>
+        <main>
+            <section class="px-25 mt-50 w-full flex items-end">
+                <div class="w-[50%] z-10">
+                    <p class="text-white font-[poppins] text-3xl font-medium">< sobre ></p>
+                    <div class="w-2/4 h-0.5 bg-(image:--gradient) ml-20 mt-5"></div>
+                        <div class="ml-40 my-10">
+                            <p class="text-white font-[poppins] text-xl/loose font-light">
+                                Olá! Meu nome é Cauã Mohor Pardini, sou um desenvolvedor web full stack e atual estudante de banco de dados. Comecei a aprender sobre desenvolvimento web ao final da pandemia em cursos online e presencial. <br>
+                                Hoje busco aprender mais linguagens e desenvolver novas habilidades. Aqui estão algumas tecnologias que tenho conhecimento:
+                            </p>
+                            <ul class="flex flex-wrap gap-10 text-white font-[poppins] text-xl font-medium mt-10 w-2/3">
+                                <li><span class="bg-(image:--gradient-top) bg-clip-text text-transparent">></span> HTML <span class="bg-(image:--gradient-top) bg-clip-text text-transparent"><</span></li>
+                                <li><span class="bg-(image:--gradient-top) bg-clip-text text-transparent">></span> CSS <span class="bg-(image:--gradient-top) bg-clip-text text-transparent"><</span></li>
+                                <li><span class="bg-(image:--gradient-top) bg-clip-text text-transparent">></span> JavaScript <span class="bg-(image:--gradient-top) bg-clip-text text-transparent"><</span></li>
+                                <li><span class="bg-(image:--gradient-top) bg-clip-text text-transparent">></span> PHP <span class="bg-(image:--gradient-top) bg-clip-text text-transparent"><</span></li>
+                                <li><span class="bg-(image:--gradient-top) bg-clip-text text-transparent">></span> GIT e GitHub <span class="bg-(image:--gradient-top) bg-clip-text text-transparent"><</span></li>
+                                <li><span class="bg-(image:--gradient-top) bg-clip-text text-transparent">></span> SQL <span class="bg-(image:--gradient-top) bg-clip-text text-transparent"><</span></li>
+                                <li><span class="bg-(image:--gradient-top) bg-clip-text text-transparent">></span> Tailwind <span class="bg-(image:--gradient-top) bg-clip-text text-transparent"><</span></li>
+                            </ul>
+                            <div class="mt-10 bg-(image:--gradient) flex justify-baseline w-fit p-0.5 relative">
+                                <button class="bg-[#202020] px-10 py-1 text-white font-[poppins] text-sm cursor-pointer">Curriculo</button>
+                                <div class="absolute w-1.5 h-1.5 border-l-1 border-t-1 border-white flex m-1"></div>
+                            </div>
+                        </div>
+                    <p class="text-white font-[poppins] text-3xl font-medium">< /sobre ></p>
+                </div>
+                <div class="w-[50%]">
+                    <div class="mr-25 flex justify-end relative z-10">
+                        <div class="w-5/7 absolute bg-(image:--gradient) h-full top-[-10%] right-[10%] p-1.5">
+                            <div class="bg-[#202020] h-full"></div>
+                        </div>
+                        <img src="./src/images/2025-03-07_13.56.31(1)(1).png" alt="" class="w-5/7 z-20">
+                    </div>
+                </div>
+            </section>
+            <section class="mt-[-3%] z-0">
+                <div class="retangulo w-full h-50 bg-[#252525]"></div>
+            </section>
+        </main>
         <div class="fixed bottom-3 left-3 bg-[#101010] px-1.5 py-3 flex flex-col gap-3">
             <a target="_blank" href="https://www.linkedin.com/in/cauã-mohor-pardini">
                 <svg class="fill-white" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="28" height="28" viewBox="0 0 50 50">
@@ -71,7 +110,7 @@
                 </svg>
             </a>
         </div>
-        <a href="#inicio" class="fixed bottom-3 right-3 bg-[#101010] p-1.5">
+        <a href="#home" class="fixed bottom-3 right-3 bg-[#101010] p-1.5">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="size-7">
                 <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 15.75 7.5-7.5 7.5 7.5" />
             </svg>              
