--- a/index.html
+++ b/index.html
@@ -96,6 +96,78 @@
             </section>
             <section class="mt-[-3%] z-0">
                 <div class="retangulo w-full h-50 bg-[#252525]"></div>
+                <div class="bg-[#252525] px-25 py-50 w-full">
+                    <p class="text-white font-[poppins] text-3xl font-medium">< projetos ></p>
+                    <div class="w-2/5 h-0.5 bg-(image:--gradient) ml-20 mt-5"></div>
+                    <div class="my-25 flex flex-wrap w-full gap-5 justify-center">
+                        <div class="bg-[#202020] w-1/4 p-5">
+                            <img src="./src/images/fundo banner.png" alt="">
+                            <div class="mt-5 flex flex-col gap-5">
+                                <p class="text-white font-[poppins] text-xl font-medium">Bolos Gaby</p>
+                                <ul class="text-white/70 font-[poppins] text-base font-light flex gap-5">
+                                    <li>HTML</li>
+                                    <li>CSS</li>
+                                    <li>JavaScript</li>
+                                </ul>
+                                <div class="flex gap-x-10 flex-wrap">
+                                    <a href="https://github.com/CauaDK/Boleria-Gaby" target="_blank" class="  bg-(image:--gradient-azul) flex p-0.5">
+                                        <div class="flex items-center gap-3 bg-[#202020] px-3 py-1">
+                                            <svg class="fill-white" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="24" height="24" viewBox="0 0 24 24">
+                                                <path d="M10.9,2.1c-4.6,0.5-8.3,4.2-8.8,8.7c-0.6,5,2.5,9.3,6.9,10.7v-2.3c0,0-0.4,0.1-0.9,0.1c-1.4,0-2-1.2-2.1-1.9 c-0.1-0.4-0.3-0.7-0.6-1C5.1,16.3,5,16.3,5,16.2C5,16,5.3,16,5.4,16c0.6,0,1.1,0.7,1.3,1c0.5,0.8,1.1,1,1.4,1c0.4,0,0.7-0.1,0.9-0.2 c0.1-0.7,0.4-1.4,1-1.8c-2.3-0.5-4-1.8-4-4c0-1.1,0.5-2.2,1.2-3C7.1,8.8,7,8.3,7,7.6C7,7.2,7,6.6,7.3,6c0,0,1.4,0,2.8,1.3 C10.6,7.1,11.3,7,12,7s1.4,0.1,2,0.3C15.3,6,16.8,6,16.8,6C17,6.6,17,7.2,17,7.6c0,0.8-0.1,1.2-0.2,1.4c0.7,0.8,1.2,1.8,1.2,3 c0,2.2-1.7,3.5-4,4c0.6,0.5,1,1.4,1,2.3v3.3c4.1-1.3,7-5.1,7-9.5C22,6.1,16.9,1.4,10.9,2.1z"></path>
+                                            </svg>
+                                            <div class="text-white font-[poppins] text-base font-normal">GitHub</div>
+                                        </div>
+                                    </a>
+                                    <a href="https://cauadk.github.io/Boleria-Gaby/" target="_blank" class="  bg-(image:--gradient-rosa) flex p-0.5">
+                                        <div class="flex items-center gap-3 bg-[#202020] px-3 py-1">
+                                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="size-6">
+                                                <path stroke-linecap="round" stroke-linejoin="round" d="M2.036 12.322a1.012 1.012 0 0 1 0-.639C3.423 7.51 7.36 4.5 12 4.5c4.638 0 8.573 3.007 9.963 7.178.07.207.07.431 0 .639C20.577 16.49 16.64 19.5 12 19.5c-4.638 0-8.573-3.007-9.963-7.178Z" />
+                                                <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
+                                            </svg>
+                                            <div class="text-white font-[poppins] text-base font-normal">Deploy</div>
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="bg-[#202020] w-1/4 justify-center items-center p-5">
+                            <img src="./src/images/fundo banner.png" alt="">
+                            <div class="mt-5 flex flex-col gap-5">
+                                <p class="text-white font-[poppins] text-xl font-medium">Bolos Gaby</p>
+                                <ul class="text-white/70 font-[poppins] text-base font-light flex gap-5 flex-wrap">
+                                    <li>HTML</li>
+                                    <li>CSS</li>
+                                    <li>JavaScript</li>
+                                    <li>JavaScript</li>
+                                    <li>JavaScript</li>
+                                </ul>
+                                <div class="flex gap-x-10 flex-wrap">
+                                    <a href="https://github.com/CauaDK/Boleria-Gaby" target="_blank" class="  bg-(image:--gradient-azul) flex p-0.5">
+                                        <div class="flex items-center gap-3 bg-[#202020] px-3 py-1">
+                                            <svg class="fill-white" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="24" height="24" viewBox="0 0 24 24">
+                                                <path d="M10.9,2.1c-4.6,0.5-8.3,4.2-8.8,8.7c-0.6,5,2.5,9.3,6.9,10.7v-2.3c0,0-0.4,0.1-0.9,0.1c-1.4,0-2-1.2-2.1-1.9 c-0.1-0.4-0.3-0.7-0.6-1C5.1,16.3,5,16.3,5,16.2C5,16,5.3,16,5.4,16c0.6,0,1.1,0.7,1.3,1c0.5,0.8,1.1,1,1.4,1c0.4,0,0.7-0.1,0.9-0.2 c0.1-0.7,0.4-1.4,1-1.8c-2.3-0.5-4-1.8-4-4c0-1.1,0.5-2.2,1.2-3C7.1,8.8,7,8.3,7,7.6C7,7.2,7,6.6,7.3,6c0,0,1.4,0,2.8,1.3 C10.6,7.1,11.3,7,12,7s1.4,0.1,2,0.3C15.3,6,16.8,6,16.8,6C17,6.6,17,7.2,17,7.6c0,0.8-0.1,1.2-0.2,1.4c0.7,0.8,1.2,1.8,1.2,3 c0,2.2-1.7,3.5-4,4c0.6,0.5,1,1.4,1,2.3v3.3c4.1-1.3,7-5.1,7-9.5C22,6.1,16.9,1.4,10.9,2.1z"></path>
+                                            </svg>
+                                            <div class="text-white font-[poppins] text-base font-normal">GitHub</div>
+                                        </div>
+                                    </a>
+                                    <a href="https://cauadk.github.io/Boleria-Gaby/" target="_blank" class="  bg-(image:--gradient-rosa) flex p-0.5">
+                                        <div class="flex items-center gap-3 bg-[#202020] px-3 py-1">
+                                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="size-6">
+                                                <path stroke-linecap="round" stroke-linejoin="round" d="M2.036 12.322a1.012 1.012 0 0 1 0-.639C3.423 7.51 7.36 4.5 12 4.5c4.638 0 8.573 3.007 9.963 7.178.07.207.07.431 0 .639C20.577 16.49 16.64 19.5 12 19.5c-4.638 0-8.573-3.007-9.963-7.178Z" />
+                                                <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
+                                            </svg>
+                                            <div class="text-white font-[poppins] text-base font-normal">Deploy</div>
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="bg-[#202020] w-1/4 flex justify-center items-center p-10">
+
+                        </div>
+                    </div>
+                    <p class="text-white font-[poppins] text-3xl font-medium">< /projetos ></p>
+                </div>
             </section>
         </main>
         <div class="fixed bottom-3 left-3 bg-[#101010] px-1.5 py-3 flex flex-col gap-3">
