--- a/index.html
+++ b/index.html
@@ -95,78 +95,82 @@
                 </div>
             </section>
             <section class="mt-[-3%] z-0">
-                <div class="retangulo w-full h-50 bg-[#252525]"></div>
-                <div class="bg-[#252525] px-25 py-50 w-full">
+                <div class="retangulo1 w-full h-50 bg-[#252525]"></div>
+                <div class="bg-[#252525] px-25 pt-50 pb-20 w-full">
                     <p class="text-white font-[poppins] text-3xl font-medium">< projetos ></p>
                     <div class="w-2/5 h-0.5 bg-(image:--gradient) ml-20 mt-5"></div>
-                    <div class="my-25 flex flex-wrap w-full gap-5 justify-center">
-                        <div class="bg-[#202020] w-1/4 p-5">
-                            <img src="./src/images/fundo banner.png" alt="">
-                            <div class="mt-5 flex flex-col gap-5">
-                                <p class="text-white font-[poppins] text-xl font-medium">Bolos Gaby</p>
-                                <ul class="text-white/70 font-[poppins] text-base font-light flex gap-5">
-                                    <li>HTML</li>
-                                    <li>CSS</li>
-                                    <li>JavaScript</li>
-                                </ul>
-                                <div class="flex gap-x-10 flex-wrap">
-                                    <a href="https://github.com/CauaDK/Boleria-Gaby" target="_blank" class="  bg-(image:--gradient-azul) flex p-0.5">
-                                        <div class="flex items-center gap-3 bg-[#202020] px-3 py-1">
-                                            <svg class="fill-white" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="24" height="24" viewBox="0 0 24 24">
-                                                <path d="M10.9,2.1c-4.6,0.5-8.3,4.2-8.8,8.7c-0.6,5,2.5,9.3,6.9,10.7v-2.3c0,0-0.4,0.1-0.9,0.1c-1.4,0-2-1.2-2.1-1.9 c-0.1-0.4-0.3-0.7-0.6-1C5.1,16.3,5,16.3,5,16.2C5,16,5.3,16,5.4,16c0.6,0,1.1,0.7,1.3,1c0.5,0.8,1.1,1,1.4,1c0.4,0,0.7-0.1,0.9-0.2 c0.1-0.7,0.4-1.4,1-1.8c-2.3-0.5-4-1.8-4-4c0-1.1,0.5-2.2,1.2-3C7.1,8.8,7,8.3,7,7.6C7,7.2,7,6.6,7.3,6c0,0,1.4,0,2.8,1.3 C10.6,7.1,11.3,7,12,7s1.4,0.1,2,0.3C15.3,6,16.8,6,16.8,6C17,6.6,17,7.2,17,7.6c0,0.8-0.1,1.2-0.2,1.4c0.7,0.8,1.2,1.8,1.2,3 c0,2.2-1.7,3.5-4,4c0.6,0.5,1,1.4,1,2.3v3.3c4.1-1.3,7-5.1,7-9.5C22,6.1,16.9,1.4,10.9,2.1z"></path>
-                                            </svg>
-                                            <div class="text-white font-[poppins] text-base font-normal">GitHub</div>
-                                        </div>
-                                    </a>
-                                    <a href="https://cauadk.github.io/Boleria-Gaby/" target="_blank" class="  bg-(image:--gradient-rosa) flex p-0.5">
-                                        <div class="flex items-center gap-3 bg-[#202020] px-3 py-1">
-                                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="size-6">
-                                                <path stroke-linecap="round" stroke-linejoin="round" d="M2.036 12.322a1.012 1.012 0 0 1 0-.639C3.423 7.51 7.36 4.5 12 4.5c4.638 0 8.573 3.007 9.963 7.178.07.207.07.431 0 .639C20.577 16.49 16.64 19.5 12 19.5c-4.638 0-8.573-3.007-9.963-7.178Z" />
-                                                <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
-                                            </svg>
-                                            <div class="text-white font-[poppins] text-base font-normal">Deploy</div>
-                                        </div>
-                                    </a>
+                    <div class="my-30 flex flex-wrap w-full gap-20 justify-center">
+                        <div class="bg-[#202020] w-1/4 p-5 flex flex-col justify-between gap-5">
+                            <div>
+                                <img src="./src/images/fundo banner.png" alt="">
+                                <div class="mt-5 flex flex-col gap-5">
+                                    <p class="text-white font-[poppins] text-xl font-medium">Bolos Gaby</p>
+                                    <ul class="text-white/70 font-[poppins] text-base font-light flex gap-5">
+                                        <li>HTML</li>
+                                        <li>CSS</li>
+                                        <li>JavaScript</li>
+                                    </ul>
                                 </div>
+                            </div>
+                            <div class="flex gap-x-10 flex-wrap">
+                                <a href="https://github.com/CauaDK/Boleria-Gaby" target="_blank" class="  bg-(image:--gradient-azul) flex p-0.5">
+                                    <div class="flex items-center gap-3 bg-[#202020] px-3 py-1">
+                                        <svg class="fill-white" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="24" height="24" viewBox="0 0 24 24">
+                                            <path d="M10.9,2.1c-4.6,0.5-8.3,4.2-8.8,8.7c-0.6,5,2.5,9.3,6.9,10.7v-2.3c0,0-0.4,0.1-0.9,0.1c-1.4,0-2-1.2-2.1-1.9 c-0.1-0.4-0.3-0.7-0.6-1C5.1,16.3,5,16.3,5,16.2C5,16,5.3,16,5.4,16c0.6,0,1.1,0.7,1.3,1c0.5,0.8,1.1,1,1.4,1c0.4,0,0.7-0.1,0.9-0.2 c0.1-0.7,0.4-1.4,1-1.8c-2.3-0.5-4-1.8-4-4c0-1.1,0.5-2.2,1.2-3C7.1,8.8,7,8.3,7,7.6C7,7.2,7,6.6,7.3,6c0,0,1.4,0,2.8,1.3 C10.6,7.1,11.3,7,12,7s1.4,0.1,2,0.3C15.3,6,16.8,6,16.8,6C17,6.6,17,7.2,17,7.6c0,0.8-0.1,1.2-0.2,1.4c0.7,0.8,1.2,1.8,1.2,3 c0,2.2-1.7,3.5-4,4c0.6,0.5,1,1.4,1,2.3v3.3c4.1-1.3,7-5.1,7-9.5C22,6.1,16.9,1.4,10.9,2.1z"></path>
+                                        </svg>
+                                        <div class="text-white font-[poppins] text-base font-normal">GitHub</div>
+                                    </div>
+                                </a>
+                                <a href="https://cauadk.github.io/Boleria-Gaby/" target="_blank" class="  bg-(image:--gradient-rosa) flex p-0.5">
+                                    <div class="flex items-center gap-3 bg-[#202020] px-3 py-1">
+                                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="size-6">
+                                            <path stroke-linecap="round" stroke-linejoin="round" d="M2.036 12.322a1.012 1.012 0 0 1 0-.639C3.423 7.51 7.36 4.5 12 4.5c4.638 0 8.573 3.007 9.963 7.178.07.207.07.431 0 .639C20.577 16.49 16.64 19.5 12 19.5c-4.638 0-8.573-3.007-9.963-7.178Z" />
+                                            <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
+                                        </svg>
+                                        <div class="text-white font-[poppins] text-base font-normal">Deploy</div>
+                                    </div>
+                                </a>
                             </div>
                         </div>
-                        <div class="bg-[#202020] w-1/4 justify-center items-center p-5">
-                            <img src="./src/images/fundo banner.png" alt="">
-                            <div class="mt-5 flex flex-col gap-5">
-                                <p class="text-white font-[poppins] text-xl font-medium">Bolos Gaby</p>
-                                <ul class="text-white/70 font-[poppins] text-base font-light flex gap-5 flex-wrap">
-                                    <li>HTML</li>
-                                    <li>CSS</li>
-                                    <li>JavaScript</li>
-                                    <li>JavaScript</li>
-                                    <li>JavaScript</li>
-                                </ul>
-                                <div class="flex gap-x-10 flex-wrap">
-                                    <a href="https://github.com/CauaDK/Boleria-Gaby" target="_blank" class="  bg-(image:--gradient-azul) flex p-0.5">
-                                        <div class="flex items-center gap-3 bg-[#202020] px-3 py-1">
-                                            <svg class="fill-white" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="24" height="24" viewBox="0 0 24 24">
-                                                <path d="M10.9,2.1c-4.6,0.5-8.3,4.2-8.8,8.7c-0.6,5,2.5,9.3,6.9,10.7v-2.3c0,0-0.4,0.1-0.9,0.1c-1.4,0-2-1.2-2.1-1.9 c-0.1-0.4-0.3-0.7-0.6-1C5.1,16.3,5,16.3,5,16.2C5,16,5.3,16,5.4,16c0.6,0,1.1,0.7,1.3,1c0.5,0.8,1.1,1,1.4,1c0.4,0,0.7-0.1,0.9-0.2 c0.1-0.7,0.4-1.4,1-1.8c-2.3-0.5-4-1.8-4-4c0-1.1,0.5-2.2,1.2-3C7.1,8.8,7,8.3,7,7.6C7,7.2,7,6.6,7.3,6c0,0,1.4,0,2.8,1.3 C10.6,7.1,11.3,7,12,7s1.4,0.1,2,0.3C15.3,6,16.8,6,16.8,6C17,6.6,17,7.2,17,7.6c0,0.8-0.1,1.2-0.2,1.4c0.7,0.8,1.2,1.8,1.2,3 c0,2.2-1.7,3.5-4,4c0.6,0.5,1,1.4,1,2.3v3.3c4.1-1.3,7-5.1,7-9.5C22,6.1,16.9,1.4,10.9,2.1z"></path>
-                                            </svg>
-                                            <div class="text-white font-[poppins] text-base font-normal">GitHub</div>
-                                        </div>
-                                    </a>
-                                    <a href="https://cauadk.github.io/Boleria-Gaby/" target="_blank" class="  bg-(image:--gradient-rosa) flex p-0.5">
-                                        <div class="flex items-center gap-3 bg-[#202020] px-3 py-1">
-                                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="size-6">
-                                                <path stroke-linecap="round" stroke-linejoin="round" d="M2.036 12.322a1.012 1.012 0 0 1 0-.639C3.423 7.51 7.36 4.5 12 4.5c4.638 0 8.573 3.007 9.963 7.178.07.207.07.431 0 .639C20.577 16.49 16.64 19.5 12 19.5c-4.638 0-8.573-3.007-9.963-7.178Z" />
-                                                <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
-                                            </svg>
-                                            <div class="text-white font-[poppins] text-base font-normal">Deploy</div>
-                                        </div>
-                                    </a>
-                                </div>
-                            </div>
+                        <div class="bg-[#202020] w-1/4 flex justify-center items-center p-10">
+
                         </div>
                         <div class="bg-[#202020] w-1/4 flex justify-center items-center p-10">
 
                         </div>
                     </div>
                     <p class="text-white font-[poppins] text-3xl font-medium">< /projetos ></p>
+                </div>
+                <div class="retangulo2 w-full h-50 bg-[#252525]"></div>
+            </section>
+            <section>
+                <div class="px-25 py-60 w-full">
+                    <p class="text-white font-[poppins] text-3xl font-medium">< diferenciais ></p>
+                    <div class="w-3/5 h-0.5 bg-(image:--gradient) ml-20 mt-5"></div>
+                    <div class="my-40 flex flex-wrap w-full gap-10 justify-center">
+                        <div class="flex flex-col items-center w-1/5 text-center gap-10">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="size-15">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M9.53 16.122a3 3 0 0 0-5.78 1.128 2.25 2.25 0 0 1-2.4 2.245 4.5 4.5 0 0 0 8.4-2.245c0-.399-.078-.78-.22-1.128Zm0 0a15.998 15.998 0 0 0 3.388-1.62m-5.043-.025a15.994 15.994 0 0 1 1.622-3.395m3.42 3.42a15.995 15.995 0 0 0 4.764-4.648l3.876-5.814a1.151 1.151 0 0 0-1.597-1.597L14.146 6.32a15.996 15.996 0 0 0-4.649 4.763m3.42 3.42a6.776 6.776 0 0 0-3.42-3.42" />
+                            </svg>
+                            <p class="bg-(image:--gradient) bg-clip-text text-transparent text-2xl font-[poppins] font-normal">Design Criativo</p>
+                            <p class="text-white text-xl font-[poppins] font-light">Crio designs “simples” porém diferentes e intuitivos, sempre visando a criatividade</p>
+                        </div>
+                        <div class="flex flex-col items-center w-1/5 text-center gap-10">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="size-15">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 6.75 22.5 12l-5.25 5.25m-10.5 0L1.5 12l5.25-5.25m7.5-3-4.5 16.5" />
+                            </svg>                              
+                            <p class="bg-(image:--gradient) bg-clip-text text-transparent text-2xl font-[poppins] font-normal">Código limpo</p>
+                            <p class="text-white text-xl font-[poppins] font-light">Faço códigos orgnizados e com padrões, pensando em um bom trabalho em equipe</p>
+                        </div>
+                        <div class="flex flex-col items-center w-1/5 text-center gap-10">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="size-15">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M15 19.128a9.38 9.38 0 0 0 2.625.372 9.337 9.337 0 0 0 4.121-.952 4.125 4.125 0 0 0-7.533-2.493M15 19.128v-.003c0-1.113-.285-2.16-.786-3.07M15 19.128v.106A12.318 12.318 0 0 1 8.624 21c-2.331 0-4.512-.645-6.374-1.766l-.001-.109a6.375 6.375 0 0 1 11.964-3.07M12 6.375a3.375 3.375 0 1 1-6.75 0 3.375 3.375 0 0 1 6.75 0Zm8.25 2.25a2.625 2.625 0 1 1-5.25 0 2.625 2.625 0 0 1 5.25 0Z" />
+                            </svg>                              
+                            <p class="bg-(image:--gradient) bg-clip-text text-transparent text-2xl font-[poppins] font-normal">Metodoligia ágil</p>
+                            <p class="text-white text-xl font-[poppins] font-light">Utilizo de metodologias e planejamentos para uma boa interação com o cliente e alta produtividade</p>
+                        </div>
+                    </div>
+                    <p class="text-white font-[poppins] text-3xl font-medium">< /diferenciais ></p>
                 </div>
             </section>
         </main>
