--- a/index.html
+++ b/index.html
@@ -10,7 +10,21 @@
             @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
         </style>
     </head>
-    <body class="bg-[#f5f5f5] z-0"><a name="home"></a>
+    <body class="bg-[#f5f5f5] z-0 cursor-none"><a name="home"></a>
+        <section>
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+        </section>
 
         <nav class="flex items-center justify-between py-3 px-5 w-full bg-[#e5e5e5] gap-2 fixed z-20 xl:py-5 xl:px-15">
             <div class="font-[poppins] text-lg font-semibold flex gap-2 items-center">
@@ -36,10 +50,10 @@
                 </div>
             </div>
             <ul class="items-center gap-6 font-[poppins] font-normal hidden xl:flex">
-                <li class="hover:bg-(image:--gradient) hover:bg-clip-text hover:text-transparent transition duration-300"><a href="#home">Inicio</a></li>
-                <li class="hover:bg-(image:--gradient) hover:bg-clip-text hover:text-transparent transition duration-300"><a href="#sobre">Sobre</a></li>
-                <li class="hover:bg-(image:--gradient) hover:bg-clip-text hover:text-transparent transition duration-300"><a href="#projetos">Projetos</a></li>
-                <li class="hover:bg-(image:--gradient) hover:bg-clip-text hover:text-transparent transition duration-300"><a href="#contato">Contato</a></li>
+                <li class="hover:bg-(image:--gradient) hover:bg-clip-text hover:text-transparent transition duration-300"><a href="#home"  id="link">Inicio</a></li>
+                <li class="hover:bg-(image:--gradient) hover:bg-clip-text hover:text-transparent transition duration-300"><a href="#sobre" >Sobre</a></li>
+                <li class="hover:bg-(image:--gradient) hover:bg-clip-text hover:text-transparent transition duration-300"><a href="#projetos" >Projetos</a></li>
+                <li class="hover:bg-(image:--gradient) hover:bg-clip-text hover:text-transparent transition duration-300"><a href="#contato" >Contato</a></li>
             </ul>
         </nav>
 
@@ -55,7 +69,7 @@
                         <p class="mt-3 font-[poppins] font-normal text-center">Programador eficaz com codigos limpos e rapidos</p>
                     </div>
                 </div>
-                <a href="#projetos" class="bg-(image:--gradient) flex justify-center rounded-lg m-20 p-1">
+                <a href="#projetos" class="bg-(image:--gradient) flex justify-center rounded-lg m-20 p-1 ">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="rotate-180 size-10">
                         <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 15.75 7.5-7.5 7.5 7.5" />
                     </svg>  
@@ -84,7 +98,7 @@
                             </ul>
                             <a href="./src/images/Currículo.pdf" target="_blank" class="bg-(image:--gradient) flex w-35 p-0.5 relative" id="box-text-link">
                                 <div class="flex w-full bg-[#f5f5f5]">
-                                    <div class="w-full py-1 font-[poppins] text-sm cursor-pointer flex justify-center" id="text-link">Curriculo</div>
+                                    <div class="w-full py-1 font-[poppins] text-sm flex justify-center" id="text-link">Curriculo</div>
                                 </div>
                                 <div class="flex bg-(image:--gradient) w-full h-full" id="depois"></div>   
                                 <div class="absolute w-1.5 h-1.5 border-l-1 border-t-1 flex m-1" id="text-link"></div>
@@ -118,7 +132,7 @@
                                 </div>
                             </div>
                             <div class="flex gap-x-5 gap-y-2 flex-wrap">
-                                <a href="https://github.com/CauaDK/Boleria-Gaby" target="_blank" class="bg-(image:--gradient-azul) flex p-0.5 w-30 relative" id="box-text-link">
+                                <a href="https://github.com/CauaDK/Boleria-Gaby" target="_blank" class="bg-(image:--gradient-azul) flex p-0.5 w-30 relative " id="box-text-link">
                                     <div class="flex items-center justify-center gap-3 bg-[#f5f5f5] py-1 w-full">
                                         <svg class="fill-black" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="24" height="24" viewBox="0 0 24 24" id="text-link-fill">
                                             <path d="M10.9,2.1c-4.6,0.5-8.3,4.2-8.8,8.7c-0.6,5,2.5,9.3,6.9,10.7v-2.3c0,0-0.4,0.1-0.9,0.1c-1.4,0-2-1.2-2.1-1.9 c-0.1-0.4-0.3-0.7-0.6-1C5.1,16.3,5,16.3,5,16.2C5,16,5.3,16,5.4,16c0.6,0,1.1,0.7,1.3,1c0.5,0.8,1.1,1,1.4,1c0.4,0,0.7-0.1,0.9-0.2 c0.1-0.7,0.4-1.4,1-1.8c-2.3-0.5-4-1.8-4-4c0-1.1,0.5-2.2,1.2-3C7.1,8.8,7,8.3,7,7.6C7,7.2,7,6.6,7.3,6c0,0,1.4,0,2.8,1.3 C10.6,7.1,11.3,7,12,7s1.4,0.1,2,0.3C15.3,6,16.8,6,16.8,6C17,6.6,17,7.2,17,7.6c0,0.8-0.1,1.2-0.2,1.4c0.7,0.8,1.2,1.8,1.2,3 c0,2.2-1.7,3.5-4,4c0.6,0.5,1,1.4,1,2.3v3.3c4.1-1.3,7-5.1,7-9.5C22,6.1,16.9,1.4,10.9,2.1z"></path>
@@ -127,7 +141,7 @@
                                     </div>
                                     <div class="flex bg-(image:--gradient-azul) w-full h-full" id="depois"></div>  
                                 </a>
-                                <a href="https://cauadk.github.io/Boleria-Gaby/" target="_blank" class="bg-(image:--gradient-rosa) flex p-0.5 w-30 relative" id="box-text-link">
+                                <a href="https://cauadk.github.io/Boleria-Gaby/" target="_blank" class="bg-(image:--gradient-rosa) flex p-0.5 w-30 relative " id="box-text-link">
                                     <div class="flex items-center gap-3 bg-[#f5f5f5] px-3 py-1">
                                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="black" class="size-6" id="text-link">
                                             <path stroke-linecap="round" stroke-linejoin="round" d="M2.036 12.322a1.012 1.012 0 0 1 0-.639C3.423 7.51 7.36 4.5 12 4.5c4.638 0 8.573 3.007 9.963 7.178.07.207.07.431 0 .639C20.577 16.49 16.64 19.5 12 19.5c-4.638 0-8.573-3.007-9.963-7.178Z" />
@@ -211,12 +225,12 @@
         </footer>
         
         <section class="fixed bottom-0 left-0 bg-[#d1d1d1] px-1.5 py-3 flex flex-col gap-3 z-10 lg:bottom-3 lg:left-3">
-            <a target="_blank" href="https://www.linkedin.com/in/cauã-mohor-pardini">
+            <a target="_blank" href="https://www.linkedin.com/in/cauã-mohor-pardini" o>
                 <svg class="fill-white" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="28" height="28" viewBox="0 0 50 50">
                     <path d="M41,4H9C6.24,4,4,6.24,4,9v32c0,2.76,2.24,5,5,5h32c2.76,0,5-2.24,5-5V9C46,6.24,43.76,4,41,4z M17,20v19h-6V20H17z M11,14.47c0-1.4,1.2-2.47,3-2.47s2.93,1.07,3,2.47c0,1.4-1.12,2.53-3,2.53C12.2,17,11,15.87,11,14.47z M39,39h-6c0,0,0-9.26,0-10 c0-2-1-4-3.5-4.04h-0.08C27,24.96,26,27.02,26,29c0,0.91,0,10,0,10h-6V20h6v2.56c0,0,1.93-2.56,5.81-2.56 c3.97,0,7.19,2.73,7.19,8.26V39z"></path>
                 </svg>
             </a>
-            <a target="_blank" href="https://github.com/CauaDK">
+            <a target="_blank" href="https://github.com/CauaDK" >
                 <svg class="fill-white" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="28" height="28" viewBox="0 0 24 24">
                     <path d="M10.9,2.1c-4.6,0.5-8.3,4.2-8.8,8.7c-0.6,5,2.5,9.3,6.9,10.7v-2.3c0,0-0.4,0.1-0.9,0.1c-1.4,0-2-1.2-2.1-1.9 c-0.1-0.4-0.3-0.7-0.6-1C5.1,16.3,5,16.3,5,16.2C5,16,5.3,16,5.4,16c0.6,0,1.1,0.7,1.3,1c0.5,0.8,1.1,1,1.4,1c0.4,0,0.7-0.1,0.9-0.2 c0.1-0.7,0.4-1.4,1-1.8c-2.3-0.5-4-1.8-4-4c0-1.1,0.5-2.2,1.2-3C7.1,8.8,7,8.3,7,7.6C7,7.2,7,6.6,7.3,6c0,0,1.4,0,2.8,1.3 C10.6,7.1,11.3,7,12,7s1.4,0.1,2,0.3C15.3,6,16.8,6,16.8,6C17,6.6,17,7.2,17,7.6c0,0.8-0.1,1.2-0.2,1.4c0.7,0.8,1.2,1.8,1.2,3 c0,2.2-1.7,3.5-4,4c0.6,0.5,1,1.4,1,2.3v3.3c4.1-1.3,7-5.1,7-9.5C22,6.1,16.9,1.4,10.9,2.1z"></path>
                 </svg>
