--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 
             <div class="bg-[#f0f0f0] flex flex-col w-full gap-20 px-5 py-20 md:px-30 lg:px-50 xl:py-35 xl:px-50 2xl:px-90">
                 <div class="xl:w-2/3">
-                    <p class="text-2xl font-[poppins] font-medium lg:text-3xl 2xl:text-4xl">Entre em contato e vamos realizar seu projeto juntos!</p>
+                    <p class="text-2xl font-[poppins] font-medium lg:text-3xl 2xl:text-4xl" id="title-footer">Entre em contato <span></span></p>
                 </div>
                 <div class="flex flex-col gap-5 items-end">
                     <a href="mailto:cauamohor10@gmail.com" target="_blank" type="mailto" class="flex bg-(image:--gradient) w-65 p-0.5 relative xl:w-80" id="box-text-link">
