Animação scroll criada

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         </style>
     </head>
     <body class="bg-[#f5f5f5] z-0 cursor-none"><a name="home"></a>
-        <section>
+        <section class="hidden lg:flex">
             <div class="circle"></div>
             <div class="circle"></div>
             <div class="circle"></div>
@@ -57,19 +57,19 @@
             </ul>
         </nav>
 
-        <header>
-            <div class="pt-50 pb-20 px-10 lg:py-40 lg:px-30 lg:pt-70 lg:pb-30">
+        <header class="flex h-[90vh] items-center justify-center">
+            <div class="w-full px-10 lg:px-30">
                 <div class="flex flex-col items-center gap-15 lg:flex-row lg:justify-around">
-                    <div class="flex flex-col items-center">
+                    <div class="flex flex-col items-center reveal-left">
                         <h1 class="bg-(image:--gradient) bg-clip-text max-w-fit text-transparent text-4xl font-[poppins] font-semibold p-2 lg:text-5xl xl:text-6xl">Designer</h1>
                         <p class="mt-3 font-[poppins] font-normal text-center"> Produtor de designs com experiências limpas e agradaveis</p>
                     </div>
-                    <div class="flex flex-col items-center">
+                    <div class="flex flex-col items-center reveal-left reveal-delay">
                         <h1 class="bg-(image:--gradient) bg-clip-text max-w-fit text-transparent text-4xl font-[poppins] font-semibold p-2 lg:text-5xl xl:text-6xl"> < Coder ></h1>
                         <p class="mt-3 font-[poppins] font-normal text-center">Programador eficaz com codigos limpos e rapidos</p>
                     </div>
                 </div>
-                <a href="#projetos" class="bg-(image:--gradient) flex justify-center rounded-lg m-20 p-1 ">
+                <a href="#projetos" class="bg-(image:--gradient) flex justify-center rounded-lg m-20 p-1">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="rotate-180 size-10">
                         <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 15.75 7.5-7.5 7.5 7.5" />
                     </svg>  
@@ -78,25 +78,25 @@
         </header>
 
         <main>
-            <section class="py-40 px-5 lg:px-20 xl:px-25"><a name="sobre"></a>
+            <section class="pb-40 px-5 lg:px-20 xl:px-25"><a name="sobre"></a>
                 <p class="font-[poppins] text-2xl font-medium lg:text-3xl">< sobre ></p>
-                <div class="w-2/5 h-0.5 bg-(image:--gradient) mx-5 mt-5"></div>
+                <div class="w-2/5 h-0.5 bg-(image:--gradient) mx-5 mt-5 reveal-left"></div>
                 <div class="flex flex-col gap-y-10 mt-15 mb-20 mx-5 md:grid md:grid-cols-2">
-                        <p class="font-[poppins] text-base font-light md:col-span-2 lg:col-span-1 xl:leading-8 2xl:text-lg 2xl:leading-10">
+                        <p class="font-[poppins] text-base font-light md:col-span-2 lg:col-span-1 xl:leading-8 2xl:text-lg 2xl:leading-10 reveal-left">
                             Olá! Meu nome é Cauã Mohor Pardini, sou um desenvolvedor web full stack e atual estudante de banco de dados. Comecei a aprender sobre desenvolvimento web ao final da pandemia em cursos online e presencial. <br>
                             Hoje busco aprender mais linguagens e desenvolver novas habilidades. Aqui estão algumas tecnologias que tenho conhecimento:
                         </p>
                         <div class="flex flex-col gap-y-10 lg:row-start-2">
                             <ul class="flex flex-wrap gap-10 font-[poppins] text-base font-medium lg:text-xl 2xl:w-3/5">
-                                <li><span class="bg-(image:--gradient-top) bg-clip-text text-transparent">></span> HTML <span class="bg-(image:--gradient-top) bg-clip-text text-transparent"><</span></li>
-                                <li><span class="bg-(image:--gradient-top) bg-clip-text text-transparent">></span> CSS <span class="bg-(image:--gradient-top) bg-clip-text text-transparent"><</span></li>
-                                <li><span class="bg-(image:--gradient-top) bg-clip-text text-transparent">></span> JavaScript <span class="bg-(image:--gradient-top) bg-clip-text text-transparent"><</span></li>
-                                <li><span class="bg-(image:--gradient-top) bg-clip-text text-transparent">></span> PHP <span class="bg-(image:--gradient-top) bg-clip-text text-transparent"><</span></li>
-                                <li><span class="bg-(image:--gradient-top) bg-clip-text text-transparent">></span> GIT e GitHub <span class="bg-(image:--gradient-top) bg-clip-text text-transparent"><</span></li>
-                                <li><span class="bg-(image:--gradient-top) bg-clip-text text-transparent">></span> SQL <span class="bg-(image:--gradient-top) bg-clip-text text-transparent"><</span></li>
-                                <li><span class="bg-(image:--gradient-top) bg-clip-text text-transparent">></span> Tailwind <span class="bg-(image:--gradient-top) bg-clip-text text-transparent"><</span></li>
+                                <li class="reveal-left reveal-delay"><span class="bg-(image:--gradient-top) bg-clip-text text-transparent">></span> HTML <span class="bg-(image:--gradient-top) bg-clip-text text-transparent"><</span></li>
+                                <li class="reveal-left reveal-delay"><span class="bg-(image:--gradient-top) bg-clip-text text-transparent">></span> CSS <span class="bg-(image:--gradient-top) bg-clip-text text-transparent"><</span></li>
+                                <li class="reveal-left reveal-delay"><span class="bg-(image:--gradient-top) bg-clip-text text-transparent">></span> JavaScript <span class="bg-(image:--gradient-top) bg-clip-text text-transparent"><</span></li>
+                                <li class="reveal-left reveal-delay"><span class="bg-(image:--gradient-top) bg-clip-text text-transparent">></span> PHP <span class="bg-(image:--gradient-top) bg-clip-text text-transparent"><</span></li>
+                                <li class="reveal-left reveal-delay"><span class="bg-(image:--gradient-top) bg-clip-text text-transparent">></span> GIT e GitHub <span class="bg-(image:--gradient-top) bg-clip-text text-transparent"><</span></li>
+                                <li class="reveal-left reveal-delay"><span class="bg-(image:--gradient-top) bg-clip-text text-transparent">></span> SQL <span class="bg-(image:--gradient-top) bg-clip-text text-transparent"><</span></li>
+                                <li class="reveal-left reveal-delay"><span class="bg-(image:--gradient-top) bg-clip-text text-transparent">></span> Tailwind <span class="bg-(image:--gradient-top) bg-clip-text text-transparent"><</span></li>
                             </ul>
-                            <a href="./src/images/Currículo.pdf" target="_blank" class="bg-(image:--gradient) flex w-35 p-0.5 relative" id="box-text-link">
+                            <a href="./src/images/Currículo.pdf" target="_blank" class="bg-(image:--gradient) flex w-35 p-0.5 relative reveal-left" id="box-text-link">
                                 <div class="flex w-full bg-[#f5f5f5]">
                                     <div class="w-full py-1 font-[poppins] text-sm flex justify-center" id="text-link">Curriculo</div>
                                 </div>
@@ -104,7 +104,7 @@
                                 <div class="absolute w-1.5 h-1.5 border-l-1 border-t-1 flex m-1" id="text-link"></div>
                             </a>
                         </div>
-                        <div class="z-10 flex relative md:justify-center lg:col-start-2 lg:items-center lg:row-span-2">
+                        <div class="z-10 flex relative md:justify-center lg:col-start-2 lg:items-center lg:row-span-2 reveal">
                             <div class="w-3/7 bg-(image:--gradient) p-0.5 lg:w-4/7 xl:w-3/7">
                                 <img src="./src/images/caua.jpg" alt="" class="w-full h-full z-20 object-cover">
                             </div>
@@ -117,8 +117,8 @@
                 <div class="retangulo1 w-full h-20 bg-[#f0f0f0] lg:h-40"></div><a name="projetos"></a>
                 <div class="bg-[#f0f0f0] pt-50 pb-25 px-5 lg:px-20 xl:px-25">
                     <p class="font-[poppins] text-2xl font-medium lg:text-3xl">< projetos ></p>
-                    <div class="w-3/5 h-0.5 bg-(image:--gradient) mx-5 mt-5"></div>
-                    <div class="my-30 flex flex-wrap gap-10 justify-center mx-5">
+                    <div class="w-3/5 h-0.5 bg-(image:--gradient) mx-5 mt-5 reveal-left"></div>
+                    <div class="my-30 flex flex-wrap gap-10 justify-center mx-5 reveal">
                         <div class="bg-[#f5f5f5] w-full p-5 flex flex-col justify-between gap-5 md:w-4/9 2xl:w-2/7">
                             <div>
                                 <img src="./src/images/fundo banner.png" alt="">
@@ -162,23 +162,23 @@
 
             <section class="py-40 px-5 lg:px-20 xl:px-25">
                 <p class="font-[poppins] text-2xl font-medium lg:text-3xl">< diferenciais ></p>
-                <div class="w-4/5 h-0.5 bg-(image:--gradient) mx-5 mt-5"></div>
+                <div class="w-4/5 h-0.5 bg-(image:--gradient) mx-5 mt-5 reveal-left"></div>
                 <div class="my-30 mx-10 flex flex-wrap gap-15 justify-center xl:my-40">
-                    <div class="flex flex-col items-center w-full text-center gap-10 md:w-2/5 2xl:w-2/7">
+                    <div class="flex flex-col items-center w-full text-center gap-10 md:w-2/5 2xl:w-2/7 reveal">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="black" class="size-15">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M9.53 16.122a3 3 0 0 0-5.78 1.128 2.25 2.25 0 0 1-2.4 2.245 4.5 4.5 0 0 0 8.4-2.245c0-.399-.078-.78-.22-1.128Zm0 0a15.998 15.998 0 0 0 3.388-1.62m-5.043-.025a15.994 15.994 0 0 1 1.622-3.395m3.42 3.42a15.995 15.995 0 0 0 4.764-4.648l3.876-5.814a1.151 1.151 0 0 0-1.597-1.597L14.146 6.32a15.996 15.996 0 0 0-4.649 4.763m3.42 3.42a6.776 6.776 0 0 0-3.42-3.42" />
                         </svg>
                         <p class="bg-(image:--gradient) bg-clip-text text-transparent text-2xl font-[poppins] font-normal">Design Criativo</p>
                         <p class="text-base font-[poppins] font-light">Crio designs “simples” porém diferentes e intuitivos, sempre visando a criatividade</p>
                     </div>
-                    <div class="flex flex-col items-center w-full text-center gap-10 md:w-2/5 2xl:w-2/7">
+                    <div class="flex flex-col items-center w-full text-center gap-10 md:w-2/5 2xl:w-2/7 reveal delay-desktop-1">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="black" class="size-15">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 6.75 22.5 12l-5.25 5.25m-10.5 0L1.5 12l5.25-5.25m7.5-3-4.5 16.5" />
                         </svg>                              
                         <p class="bg-(image:--gradient) bg-clip-text text-transparent text-2xl font-[poppins] font-normal">Código limpo</p>
                         <p class="text-base font-[poppins] font-light">Faço códigos orgnizados e com padrões, pensando em um bom trabalho em equipe</p>
                     </div>
-                    <div class="flex flex-col items-center w-full text-center gap-10 md:w-2/5 2xl:w-2/7">
+                    <div class="flex flex-col items-center w-full text-center gap-10 md:w-2/5 2xl:w-2/7 reveal delay-desktop-2">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="black" class="size-15">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M15 19.128a9.38 9.38 0 0 0 2.625.372 9.337 9.337 0 0 0 4.121-.952 4.125 4.125 0 0 0-7.533-2.493M15 19.128v-.003c0-1.113-.285-2.16-.786-3.07M15 19.128v.106A12.318 12.318 0 0 1 8.624 21c-2.331 0-4.512-.645-6.374-1.766l-.001-.109a6.375 6.375 0 0 1 11.964-3.07M12 6.375a3.375 3.375 0 1 1-6.75 0 3.375 3.375 0 0 1 6.75 0Zm8.25 2.25a2.625 2.625 0 1 1-5.25 0 2.625 2.625 0 0 1 5.25 0Z" />
                         </svg>                              
@@ -195,11 +195,11 @@
             <div class="retangulo-fim w-full h-40 bg-[#f0f0f0]"></div>
 
             <div class="bg-[#f0f0f0] flex flex-col w-full gap-20 px-5 py-20 md:px-30 lg:px-50 xl:py-35 xl:px-50 2xl:px-90">
-                <div class="xl:w-2/3">
+                <div class="xl:w-2/3 reveal">
                     <p class="text-2xl font-[poppins] font-medium lg:text-3xl 2xl:text-4xl" id="title-footer">Entre em contato <span></span></p>
                 </div>
                 <div class="flex flex-col gap-5 items-end">
-                    <a href="mailto:cauamohor10@gmail.com" target="_blank" type="mailto" class="flex bg-(image:--gradient) w-65 p-0.5 relative xl:w-80" id="box-text-link">
+                    <a href="mailto:cauamohor10@gmail.com" target="_blank" type="mailto" class="flex bg-(image:--gradient) w-65 p-0.5 relative xl:w-80 reveal-left" id="box-text-link">
                         <div class="bg-[#f0f0f0] py-1 flex gap-5 items-center w-full justify-center">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="black" class="size-4 xl:size-5" id="text-link">
                                 <path stroke-linecap="round" stroke-linejoin="round" d="M21.75 6.75v10.5a2.25 2.25 0 0 1-2.25 2.25h-15a2.25 2.25 0 0 1-2.25-2.25V6.75m19.5 0A2.25 2.25 0 0 0 19.5 4.5h-15a2.25 2.25 0 0 0-2.25 2.25m19.5 0v.243a2.25 2.25 0 0 1-1.07 1.916l-7.5 4.615a2.25 2.25 0 0 1-2.36 0L3.32 8.91a2.25 2.25 0 0 1-1.07-1.916V6.75" />
@@ -208,7 +208,7 @@
                         </div>
                         <div class="flex bg-(image:--gradient) w-full h-full" id="depois"></div>
                     </a>
-                    <a href="https://wa.me/5512996637765" target="_blank" class="flex bg-(image:--gradient) w-45 p-0.5 relative xl:w-55" id="box-text-link">
+                    <a href="https://wa.me/5512996637765" target="_blank" class="flex bg-(image:--gradient) w-45 p-0.5 relative xl:w-55 reveal-left" id="box-text-link">
                         <div class="bg-[#f0f0f0] py-1  flex gap-5 items-center w-full justify-center">
                             <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="0,0,256,256" class="w-4 h-4 xl:w-5 xl:h-5" id="text-link">
                                 <g fill="#000" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(10.66667,10.66667)"><path d="M12.01172,2c-5.506,0 -9.98823,4.47838 -9.99023,9.98438c-0.001,1.76 0.45998,3.47819 1.33398,4.99219l-1.35547,5.02344l5.23242,-1.23633c1.459,0.796 3.10144,1.21384 4.77344,1.21484h0.00391c5.505,0 9.98528,-4.47937 9.98828,-9.98437c0.002,-2.669 -1.03588,-5.17841 -2.92187,-7.06641c-1.886,-1.887 -4.39245,-2.92673 -7.06445,-2.92773zM12.00977,4c2.136,0.001 4.14334,0.8338 5.65234,2.3418c1.509,1.51 2.33794,3.51639 2.33594,5.65039c-0.002,4.404 -3.58423,7.98633 -7.99023,7.98633c-1.333,-0.001 -2.65341,-0.3357 -3.81641,-0.9707l-0.67383,-0.36719l-0.74414,0.17578l-1.96875,0.46484l0.48047,-1.78516l0.2168,-0.80078l-0.41406,-0.71875c-0.698,-1.208 -1.06741,-2.58919 -1.06641,-3.99219c0.002,-4.402 3.58528,-7.98437 7.98828,-7.98437zM8.47656,7.375c-0.167,0 -0.43702,0.0625 -0.66602,0.3125c-0.229,0.249 -0.875,0.85208 -0.875,2.08008c0,1.228 0.89453,2.41503 1.01953,2.58203c0.124,0.166 1.72667,2.76563 4.26367,3.76563c2.108,0.831 2.53614,0.667 2.99414,0.625c0.458,-0.041 1.47755,-0.60255 1.68555,-1.18555c0.208,-0.583 0.20848,-1.0845 0.14648,-1.1875c-0.062,-0.104 -0.22852,-0.16602 -0.47852,-0.29102c-0.249,-0.125 -1.47608,-0.72755 -1.70508,-0.81055c-0.229,-0.083 -0.3965,-0.125 -0.5625,0.125c-0.166,0.25 -0.64306,0.81056 -0.78906,0.97656c-0.146,0.167 -0.29102,0.18945 -0.54102,0.06445c-0.25,-0.126 -1.05381,-0.39024 -2.00781,-1.24024c-0.742,-0.661 -1.24267,-1.47656 -1.38867,-1.72656c-0.145,-0.249 -0.01367,-0.38577 0.11133,-0.50977c0.112,-0.112 0.24805,-0.2915 0.37305,-0.4375c0.124,-0.146 0.167,-0.25002 0.25,-0.41602c0.083,-0.166 0.04051,-0.3125 -0.02149,-0.4375c-0.062,-0.125 -0.54753,-1.35756 -0.76953,-1.85156c-0.187,-0.415 -0.3845,-0.42464 -0.5625,-0.43164c-0.145,-0.006 -0.31056,-0.00586 -0.47656,-0.00586z" id="text-link-fill"></path></g></g>
@@ -218,7 +218,7 @@
                         <div class="flex bg-(image:--gradient) w-full h-full" id="depois"></div>
                     </a>
                 </div>
-                <div class="flex justify-center">
+                <div class="flex justify-center reveal">
                     <p class="text-sm font-[poppins] font-light">Copyright © 2025 Cauã Mohor Pardini</p>
                 </div>
             </div><a name="contato"></a>
@@ -237,6 +237,8 @@
             </a>
         </section>
 
-        <script src="./src/script/script.js"></script>
+        <script src="https://unpkg.com/scrollreveal"></script>
+        <script src="./src/script/script.js" defer></script>
+        
     </body>
 </html>
